--- a/Notices/static/initial.html
+++ b/Notices/static/initial.html
@@ -6,30 +6,41 @@
 
       .centered{
         top:10%;
-        left:42%;
+        left: 35%;
         position:absolute;
       }
+      form{
+        margin: 0 auto;
+        display: table;
+      }
       input[type="text"]{
-        border-radius:20px;
+        border-radius:5px;
         padding:10px;
         outline:none;
+        width:100%;
       }
       textarea{
-        border-radius:20px;
+        border-radius:5px;
         padding:10px;
         outline:none;
+        width:100%;
       }
       input[type="submit"]{
-        border-radius:20px;
+        border-radius:5px;
         padding:10px;
         outline:none;
         width:100%;
         margin:10px 0px 0px 0px;
       }
       input[type="date"],input[type="time"]{
-        border-radius:20px;
+        border-radius:5px;
         padding:10px;
         outline:none;
+        width:100%;
+      }
+
+      #addImage{
+        cursor: pointer;
       }
 
       .container {
@@ -108,18 +119,68 @@
       }
 
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type='text/javascript'>
+
+      function getDate() {
+        var today = new Date();
+        var dd = today.getDate();
+        var mm = today.getMonth()+1;
+        var yyyy = today.getFullYear();
+        var time = today.getHours() + ":" + today.getMinutes();
+
+        if(dd<10) {
+            dd = '0'+dd
+        }
+
+        if(mm<10) {
+            mm = '0'+mm
+        }
+
+        today = yyyy + '-' + mm + '-' + dd;
+        console.log(today);
+        document.getElementById("date").value = today;
+        document.getElementById("time").value = time;
+      }
+
+
+      window.onload = function(){
+        document.getElementById("numImages").value = 0;
+        getDate();
+      }
+
+      $(document).on('click', '#addImage', function(){
+
+        var idNum = parseInt(document.getElementById('numImages').value) + 1;
+
+        $('#rowImage' + document.getElementById('numImages').value).after('<tr id="rowImage' + idNum + '"><td colspan="2"><input type="text" name="imageURL" hint="Link for the Image"/></td></tr>');
+
+        document.getElementById('numImages').value = parseInt(document.getElementById('numImages').value) + 1;
+      });
+
+      $(document).on("submit", "form", function(e) {
+
+         if($('#verified').prop('checked')){
+           return true;
+         }
+         else{
+           alert("Please check that you have verified this notice before submitting.");
+           return false;
+         }
+      });
+    </script>
   </head>
   <body>
     <div class="centered">
       <h1 align="center" style='padding:0px 8px 0px 0px'>Notices Portal</h1>
       <p align="center" style='padding:0px 8px 0px 0px'>
-        Please ensure right notices are entered.
+        Please ensure right notices are entered. Fields marked * are necessary.
       </p>
       <br/>
-      <form method="post" action="/portal/notices/submitted">
-        <table cellspacing="10">
+      <form method="post" id="noticesForm" action="/portal/notices/submitted">
+        <table cellspacing="10" id="parentTable">
           <tr>
-            <td>Title: </td>
+            <td>Title *</td>
             <td><input type="text" name="title" hint="Enter Title" required/></td>
           </tr>
           <tr>
@@ -127,28 +188,33 @@
             <td><textarea name="content" rows="8"></textarea></td>
           </tr>
           <tr>
-            <td>Image Link: </td>
-            <td><input type="text" name="imageURL" hint="Link for the Image"/></td>
+            <td colspan="2">Image Link: </td>
+          </tr>
+          <tr id="rowImage0">
+            <td colspan="2"><input type="text" name="imageURL" hint="Link for the Image"/></td>
           </tr>
           <tr>
-            <label class="container">Two
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            </label>
+            <td colspan="2"><font color = "orange"><span id="addImage">Add another image...</span></font><br><br></td>
           </tr>
           <tr>
             <td>Date: </td>
-            <td><input type="date" name="date" hint="Date of Upload"/></td>
+            <td><input type="date" name="date" hint="Date of Upload" id="date"/></td>
           </tr>
           <tr>
             <td>Time: </td>
-            <td><input type="time" name="time" hint="Time of Upload"/></td>
+            <td><input type="time" name="time" hint="Time of Upload" id="time"/></td>
           </tr>
+          <tr>
+            <td colspan="2"><br>Please note that the above date and time can be changed.<br><br></td>
+          </tr>
+          <tr>
+            <td colspan="2"><input type="checkbox" name="accept" id="verified"> <b>I have verified that this notice is valid</b></td>
           <tr>
             <td colspan="2">
               <input type="submit" name="submit" value="Add Notice"/>
             </td>
           </tr>
+          <input type="number" name="numImages" id="numImages" hidden/>
         </table>
       </form>
     </div>
