Added notifications to notices

--- a/Notices/static/initial.html
+++ b/Notices/static/initial.html
@@ -208,7 +208,11 @@
             <td colspan="2"><br>Please note that the above date and time can be changed.<br><br></td>
           </tr>
           <tr>
+            <td colspan="2"><input type="checkbox" name="notify" id="verified"> <b>Notify users of this notice?</b></td>
+          </tr>
+          <tr>
             <td colspan="2"><input type="checkbox" name="accept" id="verified"> <b>I have verified that this notice is valid</b></td>
+          </tr>
           <tr>
             <td colspan="2">
               <input type="submit" name="submit" value="Add Notice"/>
