--- a/Notices/static/initial.html
+++ b/Notices/static/initial.html
@@ -188,13 +188,14 @@
             <td><textarea name="content" rows="8"></textarea></td>
           </tr>
           <tr>
+            <td>PDF Link</td>
+            <td><input type="text" name="pdfLink" hint="Enter any PDF links"/></td>
+          </tr>
+          <tr>
             <td colspan="2">Image Link: </td>
           </tr>
           <tr id="rowImage0">
             <td colspan="2"><input type="text" name="imageURL" hint="Link for the Image"/></td>
-          </tr>
-          <tr>
-            <td colspan="2"><font color = "orange"><span id="addImage">Add another image...</span></font><br><br></td>
           </tr>
           <tr>
             <td>Date: </td>
@@ -208,7 +209,7 @@
             <td colspan="2"><br>Please note that the above date and time can be changed.<br><br></td>
           </tr>
           <tr>
-            <td colspan="2"><input type="checkbox" name="notify" id="verified"> <b>Notify users of this notice?</b></td>
+            <td colspan="2"><input type="checkbox" name="notify" id="notified"> <b>Notify users of this notice?</b></td>
           </tr>
           <tr>
             <td colspan="2"><input type="checkbox" name="accept" id="verified"> <b>I have verified that this notice is valid</b></td>
