--- a/Events/static/initial.html
+++ b/Events/static/initial.html
@@ -41,6 +41,16 @@
       }
 
     </style>
+    <script>
+      function mydate1() {
+        d = new Date(document.getElementById("dt").value);
+        dt = d.getDate();
+        mn = d.getMonth();
+        mn++;
+        yy = d.getFullYear();
+        document.getElementById("ndt").value = dt + "-" + mn + "-" + yy
+      }
+    </script>
   </head>
   <body>
     <div class="centered">
@@ -68,8 +78,14 @@
             <td><input type="text" name="imageURL" placeholder="Link for the Image"/></td>
           </tr>
           <tr>
-            <td>Date </td>
-            <td><input type="date" name="date" placeholder="Date of Event" required/></td>
+
+              <td>
+                Date:
+              </td>
+                <td>
+                  <input type="date" id="dt" onchange="mydate1();"/>
+                  <input type="text" id="ndt" name="date" hidden />
+                </td>
           </tr>
           <tr>
             <td>Time </td>
