Fixed date formats to yyyy-MM-dd

--- a/Notices/static/initial.html
+++ b/Notices/static/initial.html
@@ -174,7 +174,7 @@
           mn = d.getMonth();
           mn++;
           yy = d.getFullYear();
-          document.getElementById("ndt").value = dt + "-" + mn + "-" + yy
+          document.getElementById("ndt").value = yy + "-" + mn + "-" + dt;
         }
 
     </script>
