--- a/Events/static/initial.html
+++ b/Events/static/initial.html
@@ -48,7 +48,7 @@
         mn = d.getMonth();
         mn++;
         yy = d.getFullYear();
-        document.getElementById("ndt").value = dt + "-" + mn + "-" + yy
+        document.getElementById("ndt").value = yy + "-" + mn + "-" + dt;
       }
     </script>
   </head>
