--- a/Notices/static/initial.html
+++ b/Notices/static/initial.html
@@ -222,6 +222,12 @@
           <tr>
             <td colspan="2"><br>Please note that the above date and time can be changed.<br><br></td>
           </tr>
+
+          <tr>
+            <td>Passcode*</td>
+            <td><input type="text" name="pass" hint="Enter Passcode" required/></td>
+          </tr>
+
           <tr>
             <td colspan="2"><input type="checkbox" name="notify" id="notified"> <b>Notify users of this notice?</b></td>
           </tr>
