--- a/Events/static/initial.html
+++ b/Events/static/initial.html
@@ -100,6 +100,10 @@
             <td><input type="text" name="formLink" placeholder="Leave as is if no reg link"/></td>
           </tr>
           <tr>
+            <td>Passcode*</td>
+            <td><input type="text" name="pass" hint="Enter Passcode" required/></td>
+          </tr>
+          <tr>
             <td colspan="2">
               <input type="submit" name="submit" value="Add Event"/>
             </td>
