Bug fixes for magazine

--- a/Magazines/static/initial.html
+++ b/Magazines/static/initial.html
@@ -186,7 +186,7 @@
         Please ensure right magazines are entered. Fields marked * are necessary.
       </p>
       <br/>
-      <form method="post" id="noticesForm" action="/portal/notices/submitted">
+      <form method="post" id="noticesForm" action="/portal/magazines/submitted">
         <table cellspacing="10" id="parentTable">
           <tr>
             <td>Title *</td>
@@ -232,7 +232,7 @@
           </tr>
           <tr>
             <td colspan="2">
-              <input type="submit" name="submit" value="Add Notice"/>
+              <input type="submit" name="submit" value="Add Magazine"/>
             </td>
           </tr>
           <input type="number" name="numImages" id="numImages" hidden/>
